--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     </div>
 
     <div class="footer-copy">
-      Designed &amp; built by <a href="https://instagram.com/nikkk.exe" target="_blank">@nikkkexe</a> · 2025
+      Designed &amp; Built by <a href="https://instagram.com/nikkk.exe" target="_blank">@nikkkexe</a> · Last Updated FEB 2026
     </div>
   </div>
 </footer>
