--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nikshep Doggali's Portfolio</title>
-<link rel="icon" type="image/svg+xml" href="https://api.dicebear.com/7.x/pixel-art/svg?seed=BlueNinja&backgroundColor=1a1a2e">
+<link rel="icon" type="image/png" href="https://api.dicebear.com/7.x/pixel-art/png?seed=BlueNinja&backgroundColor=1a1a2e&size=64">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <style>
   *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
@@ -12,8 +12,8 @@
     --bg: #080810;
     --glass-bg: rgba(255,255,255,0.04);
     --glass-border: rgba(255,255,255,0.08);
-    --text: #e8e8f0;
-    --muted: #5a5a72;
+    --text: #f5f5ff;
+    --muted: #7878a0;
   }
   html { scroll-behavior: smooth; }
   body { font-family: 'Inter', sans-serif; background: var(--bg); color: var(--text); min-height: 100vh; overflow-x: hidden; }
@@ -48,9 +48,9 @@
   .hero-avatar img { width: 100%; height: 100%; object-fit: cover; image-rendering: pixelated; display: block; }
   .avatar-online { position: absolute; bottom: 5px; right: 5px; width: 14px; height: 14px; background: #22c55e; border-radius: 50%; border: 2px solid var(--bg); animation: pulse-green 2s infinite; }
   .hero-title { font-size: 42px; font-weight: 900; line-height: 1.12; margin-bottom: 20px; letter-spacing: -0.8px; }
-  .hero-title .dim { color: rgba(232,232,240,0.3); }
-  body.light .hero-title .dim { color: rgba(15,15,26,0.28); }
-  .hero-desc { font-size: 15.5px; line-height: 1.75; opacity: 0.78; margin-bottom: 32px; max-width: 620px; }
+  .hero-title .dim { color: rgba(245,245,255,0.45); }
+  body.light .hero-title .dim { color: rgba(15,15,26,0.38); }
+  .hero-desc { font-size: 15.5px; line-height: 1.75; opacity: 0.92; margin-bottom: 32px; max-width: 620px; }
   .tech-badge { display: inline-flex; align-items: center; gap: 5px; background: var(--glass-bg); border: 1px solid var(--glass-border); border-radius: 7px; padding: 3px 10px; font-size: 13.5px; font-weight: 500; vertical-align: middle; margin: 2px; backdrop-filter: blur(8px); }
 
   /* ── CTA BLOCK ── */
@@ -77,14 +77,64 @@
   hr { border: none; border-top: 1px solid var(--glass-border); margin: 52px 0; }
 
   /* ── EXPERIENCE ── */
-  .exp-item { display: flex; gap: 18px; margin-bottom: 28px; padding-bottom: 28px; border-bottom: 1px solid var(--glass-border); }
-  .exp-item:last-child { border-bottom: none; margin-bottom: 0; padding-bottom: 0; }
-  .exp-logo { width: 44px; height: 44px; background: var(--glass-bg); border: 1px solid var(--glass-border); border-radius: 10px; display: flex; align-items: center; justify-content: center; font-size: 20px; flex-shrink: 0; backdrop-filter: blur(8px); }
-  .exp-top { display: flex; align-items: flex-start; justify-content: space-between; margin-bottom: 3px; gap: 8px; }
-  .exp-title { font-weight: 600; font-size: 15px; }
-  .exp-date { font-size: 12px; color: var(--muted); white-space: nowrap; }
-  .exp-company { font-size: 13px; color: var(--muted); margin-bottom: 8px; }
-  .exp-desc { font-size: 13.5px; line-height: 1.68; opacity: 0.72; }
+  /* ── EXPERIENCE ── */
+  .exp-featured { background: var(--glass-bg); border: 1px solid var(--glass-border); border-radius: 18px; padding: 26px 28px; margin-bottom: 14px; backdrop-filter: blur(14px); position: relative; overflow: hidden; }
+  .exp-featured::before { content: ''; position: absolute; inset: 0; background: linear-gradient(140deg, rgba(255,255,255,0.04) 0%, transparent 60%); pointer-events: none; }
+  .exp-head { display: flex; align-items: flex-start; gap: 16px; margin-bottom: 18px; }
+  .exp-logo { width: 48px; height: 48px; background: var(--glass-bg); border: 1px solid var(--glass-border); border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 22px; flex-shrink: 0; overflow: hidden; }
+  .exp-logo img { width: 100%; height: 100%; object-fit: cover; border-radius: 10px; }
+  .exp-meta { flex: 1; min-width: 0; }
+  .exp-name-row { display: flex; align-items: center; gap: 10px; margin-bottom: 2px; flex-wrap: wrap; }
+  .exp-company-name { font-size: 15px; font-weight: 700; letter-spacing: -0.2px; }
+  .exp-working-badge { display: inline-flex; align-items: center; gap: 5px; font-size: 11px; font-weight: 600; padding: 3px 9px; border-radius: 999px; background: rgba(34,197,94,0.12); border: 1px solid rgba(34,197,94,0.25); color: #4ade80; }
+  .exp-working-dot { width: 6px; height: 6px; border-radius: 50%; background: #22c55e; animation: pulse-green 2s infinite; flex-shrink: 0; }
+  .exp-role { font-size: 13px; color: var(--muted); }
+  .exp-right { text-align: right; flex-shrink: 0; }
+  .exp-dates { font-size: 12px; color: var(--muted); margin-bottom: 2px; white-space: nowrap; }
+  .exp-location { font-size: 12px; color: var(--muted); white-space: nowrap; }
+  .exp-tech-label { font-size: 11px; text-transform: uppercase; letter-spacing: 1.5px; color: var(--muted); margin-bottom: 10px; font-weight: 600; }
+  .exp-tech-list { display: flex; flex-wrap: wrap; gap: 7px; margin-bottom: 18px; }
+  .exp-tech-badge { display: inline-flex; align-items: center; gap: 5px; padding: 4px 10px; border-radius: 8px; font-size: 12px; font-weight: 500; background: var(--glass-bg); border: 1px solid var(--glass-border); color: var(--text); backdrop-filter: blur(6px); }
+  .exp-tech-badge img { width: 14px; height: 14px; object-fit: contain; }
+  .exp-bullets { list-style: none; display: flex; flex-direction: column; gap: 8px; }
+  .exp-bullets li { font-size: 13.5px; line-height: 1.65; color: rgba(245,245,255,0.85); display: flex; gap: 8px; }
+  body.light .exp-bullets li { color: rgba(15,15,26,0.82); }
+  .exp-bullets li::before { content: '▪'; color: var(--muted); flex-shrink: 0; margin-top: 1px; }
+  /* compact items */
+  .exp-list { display: flex; flex-direction: column; gap: 0; margin-bottom: 18px; }
+  .exp-item { display: flex; align-items: center; gap: 14px; padding: 14px 0; border-bottom: 1px solid var(--glass-border); cursor: pointer; }
+  .exp-item:last-child { border-bottom: none; }
+  .exp-item-meta { flex: 1; min-width: 0; }
+  .exp-item-name { font-size: 14px; font-weight: 600; margin-bottom: 2px; }
+  .exp-item-role { font-size: 12px; color: var(--muted); }
+  .exp-item-right { text-align: right; flex-shrink: 0; }
+  .exp-item-dates { font-size: 12px; color: var(--muted); margin-bottom: 2px; }
+  .exp-item-loc { font-size: 12px; color: var(--muted); }
+  .exp-show-more { width: 100%; padding: 13px; background: var(--glass-bg); border: 1px solid var(--glass-border); color: var(--muted); border-radius: 12px; font-size: 13px; font-weight: 500; cursor: pointer; transition: all 0.2s; font-family: inherit; backdrop-filter: blur(8px); }
+  .exp-show-more:hover { background: rgba(255,255,255,0.07); color: var(--text); }
+  /* ── LIFE SECTION ── */
+  .life-card { display: flex; align-items: center; gap: 16px; background: var(--glass-bg); border: 1px solid var(--glass-border); border-radius: 16px; padding: 18px 22px; margin-bottom: 10px; text-decoration: none; color: inherit; cursor: pointer; transition: all 0.2s; backdrop-filter: blur(12px); position: relative; overflow: hidden; }
+  .life-card::before { content: ''; position: absolute; inset: 0; background: linear-gradient(135deg, rgba(255,255,255,0.04) 0%, transparent 60%); pointer-events: none; }
+  .life-card:hover { background: rgba(255,255,255,0.07); border-color: rgba(255,255,255,0.14); transform: translateX(4px); }
+  .life-card-icon { width: 40px; height: 40px; border-radius: 10px; background: rgba(255,255,255,0.06); border: 1px solid rgba(255,255,255,0.1); display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
+  .life-card-icon svg { width: 18px; height: 18px; color: rgba(255,255,255,0.6); }
+  body.light .life-card-icon svg { color: rgba(0,0,0,0.5); }
+  .life-card-text { flex: 1; }
+  .life-card-title { font-size: 15px; font-weight: 700; margin-bottom: 3px; }
+  .life-card-desc { font-size: 13px; color: var(--muted); }
+  .life-card-arrow { color: var(--muted); }
+  .life-expand { overflow: hidden; max-height: 0; transition: max-height 0.4s cubic-bezier(0.16,1,0.3,1), opacity 0.3s; opacity: 0; }
+  .life-expand.open { max-height: 300px; opacity: 1; margin-bottom: 10px; }
+  .life-empty { display: flex; flex-direction: column; align-items: center; gap: 8px; padding: 28px 20px; background: var(--glass-bg); border: 1px dashed rgba(255,255,255,0.1); border-radius: 14px; text-align: center; margin-top: 2px; }
+  .life-empty-icon { font-size: 28px; }
+  .life-empty-text { font-size: 14px; font-weight: 600; color: var(--text); opacity: 0.7; }
+  .life-empty-sub { font-size: 12px; color: var(--muted); }
+  /* exp expand */
+  .exp-item-expandable { cursor: pointer; }
+  .exp-item-expandable:hover { background: rgba(255,255,255,0.03); border-radius: 10px; }
+  .exp-expand-body { overflow: hidden; max-height: 0; transition: max-height 0.45s cubic-bezier(0.16,1,0.3,1), opacity 0.3s; opacity: 0; }
+  .exp-expand-body.open { max-height: 400px; opacity: 1; }
+  .exp-expand-bullets { padding: 14px 0 18px 4px; border-bottom: 1px solid var(--glass-border); }
 
   /* ── PROJECTS ── */
   .tw-cursor { display: inline-block; color: rgba(167,139,250,0.8); animation: tw-blink 1s step-end infinite; font-weight: 300; }
@@ -277,7 +327,7 @@
     <ul class="nav-links">
       <li><a href="#experience">Work</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#persona">Persona</a></li>
+      <li><a href="#life">Life</a></li><li><a href="#persona">Persona</a></li>
     </ul>
   </div>
   <button class="theme-btn" id="theme-toggle">🌙</button>
@@ -328,22 +378,76 @@
   <div id="experience">
     <p class="section-label">Featured</p>
     <h2 class="section-title">Experience</h2>
-    <div class="exp-item reveal">
-      <div class="exp-logo">🚀</div>
-      <div>
-        <div class="exp-top"><span class="exp-title">Full Stack Developer</span><span class="exp-date">2024 — Present</span></div>
-        <div class="exp-company">Freelance / Independent</div>
-        <p class="exp-desc">Building full-stack web applications for clients using React, Next.js, TypeScript, and PostgreSQL. Focused on clean UI/UX, performance, and scalable architecture. Delivered multiple production projects including AI tools, finance trackers, and creative 3D web experiences.</p>
+
+    <!-- Featured role -->
+    <div class="exp-featured reveal">
+      <div class="exp-head">
+        <div class="exp-logo" style="background:#0d0d14;font-size:20px;">🏡</div>
+        <div class="exp-meta">
+          <div class="exp-name-row">
+            <span class="exp-company-name">BackyardDevs</span>
+            <span class="exp-working-badge"><span class="exp-working-dot"></span>Working</span>
+          </div>
+          <div class="exp-role">Founding Engineer · Remote (India)</div>
+        </div>
+        <div class="exp-right">
+          <div class="exp-dates">2024 — Present</div>
+          <div class="exp-location">India (Remote)</div>
+        </div>
+      </div>
+      <div class="exp-tech-label">Technologies &amp; Tools</div>
+      <div class="exp-tech-list">
+        <span class="exp-tech-badge"><img src="https://cdn.simpleicons.org/nextdotjs/white" alt="">Next.js</span>
+        <span class="exp-tech-badge"><img src="https://cdn.simpleicons.org/tailwindcss/06B6D4" alt="">Tailwind CSS</span>
+        <span class="exp-tech-badge"><img src="https://cdn.simpleicons.org/typescript/3178C6" alt="">TypeScript</span>
+        <span class="exp-tech-badge"><img src="https://cdn.simpleicons.org/react/61DAFB" alt="">React</span>
+        <span class="exp-tech-badge"><img src="https://cdn.simpleicons.org/postgresql/4169E1" alt="">PostgreSQL</span>
+        <span class="exp-tech-badge"><img src="https://cdn.simpleicons.org/vercel/white" alt="">Vercel</span>
+        <span class="exp-tech-badge"><img src="https://cdn.simpleicons.org/bun/F472B6" alt="">Bun</span>
+      </div>
+      <ul class="exp-bullets">
+        <li>Architected and developed complete full-stack web applications from ground up — AI tools, finance trackers, and immersive 3D web experiences.</li>
+        <li>Built and shipped 6+ production projects with a focus on performance, clean UI/UX, and scalable architecture.</li>
+        <li>Implemented backend API integrations, efficient data fetching strategies, and robust error handling across multiple platforms.</li>
+        <li>Enhanced user interfaces through consistent design systems, sharp typography, and seamless micro-interactions.</li>
+      </ul>
+    </div>
+
+    <!-- Compact list -->
+    <div class="exp-list reveal">
+      <div class="exp-item exp-item-expandable" onclick="toggleExp(this)">
+        <div class="exp-logo">📚</div>
+        <div class="exp-item-meta">
+          <div class="exp-item-name">nogoofup</div>
+          <div class="exp-item-role">Founder</div>
+        </div>
+        <div class="exp-item-right">
+          <div class="exp-item-dates">2024 — Present</div>
+          <div class="exp-item-loc">Remote (India)</div>
+        </div>
+      </div>
+      <div class="exp-expand-body" id="expand-nogoofup" style="display:none;">
+        <ul class="exp-bullets exp-expand-bullets">
+          <li>Founded <strong>nogoofup</strong> — a smart prep tracker and intelligent education management platform designed for students and self-learners.</li>
+          <li>Built a comprehensive solution for education tracking: goal-setting, progress analytics, revision scheduling, and performance insights all in one place.</li>
+          <li>Designed the full product from zero — ideation, UX, backend architecture, and frontend delivery — as a solo founding engineer.</li>
+          <li>Solving the gap between raw study time and actual exam readiness with data-driven insights and accountability tools.</li>
+        </ul>
+      </div>
+      <div class="exp-item">
+        <div class="exp-logo">🏫</div>
+        <div class="exp-item-meta">
+          <div class="exp-item-name">Delhi Public School, Mysore</div>
+          <div class="exp-item-role">Schooling</div>
+        </div>
+        <div class="exp-item-right">
+          <div class="exp-item-dates">Until 2024</div>
+          <div class="exp-item-loc">Mysore, India</div>
+        </div>
       </div>
     </div>
-    <div class="exp-item reveal">
-      <div class="exp-logo">🏫</div>
-      <div>
-        <div class="exp-top"><span class="exp-title">Schooling</span><span class="exp-date">Until 2024</span></div>
-        <div class="exp-company">Delhi Public School, Mysore</div>
-        <p class="exp-desc">Completed schooling at DPS Mysore — one of the premier institutions under the Delhi Public School Society. Built a strong foundation in mathematics and sciences while discovering a passion for computers and software development. Participated in coding clubs and tech fests that sparked the journey into full-stack development.</p>
-      </div>
-    </div>
+
+    <button class="exp-show-more reveal">Show all work experiences ↓</button>
   </div>
 
   <hr>
@@ -390,6 +494,50 @@
         <div class="project-body"><div class="project-name">ValentineSpam <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg></div><p class="project-desc">Send unlimited cute, chaotic Valentine's messages — a fun micro-app for the season.</p><div class="project-tags"><span class="tag">Fun</span><span class="tag">React</span><span class="tag">UI/UX</span></div></div>
       </a>
 
+    </div>
+  </div>
+
+  <hr>
+
+  <!-- LIFE SECTION -->
+  <div id="life">
+    <p class="section-label">Personal</p>
+    <h2 class="section-title">Life</h2>
+
+    <div class="life-card reveal" onclick="toggleLife('books')">
+      <div class="life-card-icon">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
+      </div>
+      <div class="life-card-text">
+        <div class="life-card-title">Books</div>
+        <div class="life-card-desc">Books that have influenced my thinking and growth.</div>
+      </div>
+      <svg class="life-card-arrow" id="arrow-books" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="transition:transform 0.3s;"><polyline points="9 18 15 12 9 6"/></svg>
+    </div>
+    <div class="life-expand" id="life-books">
+      <div class="life-empty">
+        <div class="life-empty-icon">📖</div>
+        <div class="life-empty-text">Yet to be curated</div>
+        <div class="life-empty-sub">My reading list is being compiled — check back soon.</div>
+      </div>
+    </div>
+
+    <div class="life-card reveal" onclick="toggleLife('movies')">
+      <div class="life-card-icon">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"><rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"/><line x1="7" y1="2" x2="7" y2="22"/><line x1="17" y1="2" x2="17" y2="22"/><line x1="2" y1="12" x2="22" y2="12"/><line x1="2" y1="7" x2="7" y2="7"/><line x1="17" y1="7" x2="22" y2="7"/><line x1="17" y1="17" x2="22" y2="17"/><line x1="2" y1="17" x2="7" y2="17"/></svg>
+      </div>
+      <div class="life-card-text">
+        <div class="life-card-title">Movies</div>
+        <div class="life-card-desc">Movies and shows that have inspired and entertained me.</div>
+      </div>
+      <svg class="life-card-arrow" id="arrow-movies" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="transition:transform 0.3s;"><polyline points="9 18 15 12 9 6"/></svg>
+    </div>
+    <div class="life-expand" id="life-movies">
+      <div class="life-empty">
+        <div class="life-empty-icon">🎬</div>
+        <div class="life-empty-text">Yet to be curated</div>
+        <div class="life-empty-sub">My watchlist is coming together — check back soon.</div>
+      </div>
     </div>
   </div>
 
@@ -809,6 +957,21 @@ document.getElementById('theme-toggle').addEventListener('click', function(){
     });
   });
 })();
+
+/* ── LIFE EXPAND ─────────────────────────────────────────────────── */
+function toggleLife(id) {
+  const panel = document.getElementById('life-' + id);
+  const arrow = document.getElementById('arrow-' + id);
+  const open = panel.classList.toggle('open');
+  if (arrow) arrow.style.transform = open ? 'rotate(90deg)' : '';
+}
+
+/* ── EXP EXPAND ──────────────────────────────────────────────────── */
+function toggleExp(el) {
+  const body = el.nextElementSibling;
+  if (!body || !body.classList.contains('exp-expand-body')) return;
+  body.classList.toggle('open');
+}
 
 /* ── SMOOTH SCROLL ────────────────────────────────────────────────── */
 document.querySelectorAll('a[href^="#"]').forEach(a=>a.addEventListener('click',e=>{
