--- a/index.html
+++ b/index.html
@@ -311,9 +311,58 @@
     .persona-card { padding: 36px 24px; }
     .footer-inner { padding: 0 16px; }
   }
+
+  /* ── SCROLL PROGRESS BAR ── */
+  #scroll-bar { position: fixed; top: 0; left: 0; height: 2px; width: 0%; z-index: 9998; background: linear-gradient(90deg, #7c3aed, #a78bfa, #c4b5fd); transition: width 0.05s linear; }
+
+  /* ── CUSTOM CURSOR ── */
+  #cursor-dot { width: 8px; height: 8px; background: #a78bfa; border-radius: 50%; position: fixed; pointer-events: none; z-index: 9997; transform: translate(-50%,-50%); transition: transform 0.1s, opacity 0.3s; }
+  #cursor-ring { width: 28px; height: 28px; border: 1.5px solid rgba(167,139,250,0.5); border-radius: 50%; position: fixed; pointer-events: none; z-index: 9996; transform: translate(-50%,-50%); transition: width 0.2s, height 0.2s, border-color 0.2s; }
+  body.cursor-hover #cursor-dot { transform: translate(-50%,-50%) scale(2.2); background: #c4b5fd; }
+  body.cursor-hover #cursor-ring { width: 44px; height: 44px; border-color: rgba(167,139,250,0.3); }
+
+  /* ── BACK TO TOP ── */
+  #back-top { position: fixed; bottom: 28px; right: 28px; width: 42px; height: 42px; border-radius: 50%; background: rgba(124,58,237,0.85); border: 1px solid rgba(167,139,250,0.3); color: #fff; display: flex; align-items: center; justify-content: center; cursor: pointer; z-index: 500; opacity: 0; transform: translateY(12px); transition: opacity 0.3s, transform 0.3s; backdrop-filter: blur(12px); box-shadow: 0 4px 20px rgba(109,40,217,0.4); }
+  #back-top.visible { opacity: 1; transform: translateY(0); }
+  #back-top:hover { background: rgba(124,58,237,1); transform: translateY(-3px); box-shadow: 0 8px 28px rgba(109,40,217,0.6); }
+  #back-top svg { width: 16px; height: 16px; }
+
+  /* ── SOUND TOGGLE ── */
+  #sound-btn { background: var(--glass-bg); border: 1px solid var(--glass-border); color: var(--muted); width: 36px; height: 36px; border-radius: 8px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 15px; transition: background 0.2s, color 0.2s; }
+  #sound-btn:hover { background: rgba(255,255,255,0.1); color: var(--text); }
+  #sound-btn.active { color: #a78bfa; border-color: rgba(167,139,250,0.3); }
+
+  /* ── STAT COUNTERS ── */
+  .stats-row { display: flex; gap: 24px; margin-bottom: 36px; }
+  .stat-item { display: flex; flex-direction: column; }
+  .stat-num { font-size: 28px; font-weight: 900; letter-spacing: -1.5px; background: linear-gradient(135deg, #f5f5ff, #a78bfa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; line-height: 1; }
+  .stat-label { font-size: 11.5px; color: var(--muted); margin-top: 3px; text-transform: uppercase; letter-spacing: 0.5px; }
+  .stat-divider { width: 1px; background: var(--glass-border); align-self: stretch; margin: 2px 0; }
+
+  /* ── SKILLS CONSTELLATION ── */
+  .skills-wrap { position: relative; margin-bottom: 52px; }
+  #skills-canvas { width: 100%; height: 200px; display: block; border-radius: 18px; border: 1px solid var(--glass-border); background: rgba(255,255,255,0.02); cursor: crosshair; }
+
+  /* ── MAGNETIC BTN ── */
+  .btn-touch { display: inline-flex; align-items: center; gap: 9px; padding: 12px 26px; border-radius: 12px; font-size: 14px; font-weight: 600; cursor: pointer; text-decoration: none; transition: box-shadow 0.25s; font-family: inherit; color: #fff; border: none; position: relative; overflow: hidden; background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 40%, #5b21b6 100%); box-shadow: 0 4px 24px rgba(109,40,217,0.35); margin-bottom: 48px; will-change: transform; }
+  .btn-touch::before { content: ''; position: absolute; inset: 0; background: linear-gradient(135deg, rgba(255,255,255,0.12), transparent); pointer-events: none; }
+  .btn-touch svg { width: 16px; height: 16px; flex-shrink: 0; }
+
 </style>
 </head>
 <body>
+
+<!-- ── SCROLL PROGRESS BAR ── -->
+<div id="scroll-bar"></div>
+
+<!-- ── CURSOR ── -->
+<div id="cursor-dot"></div>
+<div id="cursor-ring"></div>
+
+<!-- ── BACK TO TOP ── -->
+<button id="back-top" onclick="window.scrollTo({top:0,behavior:'smooth'})" title="Back to top">
+  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="18 15 12 9 6 15"/></svg>
+</button>
 
 <!-- ── ONEKO CAT ── -->
 <div id="oneko"></div>
@@ -330,6 +379,7 @@
       <li><a href="#life">Life</a></li><li><a href="#persona">Persona</a></li>
     </ul>
   </div>
+  <button id="sound-btn" title="Toggle sound">🔇</button>
   <button class="theme-btn" id="theme-toggle">🌙</button>
 </nav>
 
@@ -361,6 +411,30 @@
     <span class="tech-badge">PostgreSQL</span>.
     Focused on UI design. Enthusiastic about <strong>Three.js</strong>.
   </p>
+
+
+  <!-- STAT COUNTERS -->
+  <div class="stats-row reveal">
+    <div class="stat-item">
+      <span class="stat-num" data-target="6">0</span>
+      <span class="stat-label">Projects shipped</span>
+    </div>
+    <div class="stat-divider"></div>
+    <div class="stat-item">
+      <span class="stat-num" data-target="2" data-suffix="+">0</span>
+      <span class="stat-label">Years building</span>
+    </div>
+    <div class="stat-divider"></div>
+    <div class="stat-item">
+      <span class="stat-num" data-target="3" data-prefix="">0</span>
+      <span class="stat-label">Companies</span>
+    </div>
+    <div class="stat-divider"></div>
+    <div class="stat-item">
+      <span class="stat-num" data-target="100" data-suffix="%" data-from-zero="true">0</span>
+      <span class="stat-label">Passion for craft</span>
+    </div>
+  </div>
 
   <!-- CTA nudge text -->
   <div class="cta-nudge reveal">
@@ -498,6 +572,10 @@
   </div>
 
   <hr>
+
+  <div class="skills-wrap reveal">
+    <canvas id="skills-canvas"></canvas>
+  </div>
 
   <!-- LIFE SECTION -->
   <div id="life">
@@ -955,6 +1033,243 @@ document.getElementById('theme-toggle').addEventListener('click', function(){
       card.style.transition = 'transform 0.5s cubic-bezier(0.16,1,0.3,1), box-shadow 0.5s cubic-bezier(0.16,1,0.3,1)';
       setTimeout(() => { card.style.transition = ''; }, 500);
     });
+  });
+})();
+
+/* ── SCROLL PROGRESS BAR ─────────────────────────────────────────── */
+(function(){
+  const bar = document.getElementById('scroll-bar');
+  window.addEventListener('scroll', () => {
+    const pct = window.scrollY / (document.documentElement.scrollHeight - window.innerHeight) * 100;
+    bar.style.width = pct + '%';
+  }, {passive:true});
+})();
+
+/* ── BACK TO TOP ──────────────────────────────────────────────────── */
+(function(){
+  const btn = document.getElementById('back-top');
+  window.addEventListener('scroll', () => {
+    btn.classList.toggle('visible', window.scrollY > 400);
+  }, {passive:true});
+})();
+
+/* ── TAB TITLE EASTER EGG ────────────────────────────────────────── */
+(function(){
+  const orig = document.title;
+  document.addEventListener('visibilitychange', () => {
+    document.title = document.hidden ? '👀 come back...' : orig;
+  });
+})();
+
+/* ── CUSTOM CURSOR ────────────────────────────────────────────────── */
+(function(){
+  const dot = document.getElementById('cursor-dot');
+  const ring = document.getElementById('cursor-ring');
+  if (!dot || !ring) return;
+  let rx = 0, ry = 0;
+  window.addEventListener('mousemove', e => {
+    dot.style.left = e.clientX + 'px';
+    dot.style.top  = e.clientY + 'px';
+    // ring lags behind with lerp
+    rx += (e.clientX - rx) * 0.14;
+    ry += (e.clientY - ry) * 0.14;
+  });
+  // smooth ring follow
+  (function lerpRing(){
+    requestAnimationFrame(lerpRing);
+    ring.style.left = rx + 'px';
+    ring.style.top  = ry + 'px';
+  })();
+  // hover effect on interactive elements
+  document.querySelectorAll('a,button,.project-card,.life-card,.exp-item-expandable').forEach(el => {
+    el.addEventListener('mouseenter', () => document.body.classList.add('cursor-hover'));
+    el.addEventListener('mouseleave', () => document.body.classList.remove('cursor-hover'));
+  });
+  // hide on mobile
+  if ('ontouchstart' in window) { dot.style.display = 'none'; ring.style.display = 'none'; }
+})();
+
+/* ── MAGNETIC GET IN TOUCH ────────────────────────────────────────── */
+(function(){
+  const btn = document.querySelector('.btn-touch');
+  if (!btn) return;
+  btn.addEventListener('mousemove', e => {
+    const r = btn.getBoundingClientRect();
+    const x = e.clientX - r.left - r.width / 2;
+    const y = e.clientY - r.top  - r.height / 2;
+    btn.style.transform = `translate(${x * 0.28}px, ${y * 0.28}px)`;
+    btn.style.boxShadow = `${x * 0.12}px ${y * 0.12 + 14}px 40px rgba(109,40,217,0.55)`;
+  });
+  btn.addEventListener('mouseleave', () => {
+    btn.style.transform = '';
+    btn.style.boxShadow = '';
+    btn.style.transition = 'transform 0.5s cubic-bezier(0.16,1,0.3,1), box-shadow 0.4s';
+    setTimeout(() => btn.style.transition = '', 500);
+  });
+})();
+
+/* ── STAT COUNTERS ────────────────────────────────────────────────── */
+(function(){
+  const nums = document.querySelectorAll('.stat-num[data-target]');
+  if (!nums.length) return;
+  const obs = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (!entry.isIntersecting) return;
+      const el = entry.target;
+      const target = +el.dataset.target;
+      const suffix = el.dataset.suffix || '';
+      const prefix = el.dataset.prefix !== undefined ? el.dataset.prefix : '';
+      const dur = 1400;
+      const start = performance.now();
+      (function tick(now){
+        const p = Math.min((now - start) / dur, 1);
+        const ease = 1 - Math.pow(1 - p, 3);
+        el.textContent = prefix + Math.round(ease * target) + suffix;
+        if (p < 1) requestAnimationFrame(tick);
+      })(start);
+      obs.unobserve(el);
+    });
+  }, {threshold: 0.5});
+  nums.forEach(n => obs.observe(n));
+})();
+
+/* ── SKILLS CONSTELLATION ─────────────────────────────────────────── */
+(function(){
+  const canvas = document.getElementById('skills-canvas');
+  if (!canvas) return;
+  const ctx = canvas.getContext('2d');
+  const skills = [
+    {name:'TypeScript',color:'#3178C6'},{name:'React',color:'#61DAFB'},
+    {name:'Next.js',color:'#e2e8f0'},{name:'Bun',color:'#f472b6'},
+    {name:'Tailwind',color:'#06B6D4'},{name:'Three.js',color:'#a78bfa'},
+    {name:'PostgreSQL',color:'#4169E1'},{name:'Vercel',color:'#f5f5ff'},
+    {name:'Figma',color:'#F24E1E'},{name:'Node.js',color:'#68A063'},
+  ];
+  let nodes = [], W, H, mouse = {x:-999,y:-999};
+
+  function resize(){
+    const dpr = window.devicePixelRatio || 1;
+    const rect = canvas.getBoundingClientRect();
+    W = rect.width; H = rect.height;
+    canvas.width  = W * dpr;
+    canvas.height = H * dpr;
+    ctx.scale(dpr, dpr);
+    nodes = skills.map((s, i) => ({
+      ...s,
+      x: W * 0.08 + (W * 0.84) * (i % 5) / 4 + (Math.random()-0.5)*28,
+      y: H * 0.28 + (H * 0.44) * Math.floor(i / 5) + (Math.random()-0.5)*22,
+      vx: (Math.random()-0.5)*0.25,
+      vy: (Math.random()-0.5)*0.25,
+      r: 3.5,
+    }));
+  }
+
+  function draw(){
+    ctx.clearRect(0,0,W,H);
+    // connections
+    for(let i=0;i<nodes.length;i++){
+      for(let j=i+1;j<nodes.length;j++){
+        const dx=nodes[i].x-nodes[j].x, dy=nodes[i].y-nodes[j].y;
+        const d=Math.sqrt(dx*dx+dy*dy);
+        if(d<180){
+          ctx.beginPath();
+          ctx.moveTo(nodes[i].x,nodes[i].y);
+          ctx.lineTo(nodes[j].x,nodes[j].y);
+          ctx.strokeStyle=`rgba(167,139,250,${(1-d/180)*0.18})`;
+          ctx.lineWidth=1;
+          ctx.stroke();
+        }
+      }
+    }
+    // nodes + labels
+    nodes.forEach(n => {
+      const dm=Math.hypot(n.x-mouse.x,n.y-mouse.y);
+      const glow = dm < 60 ? (1-dm/60) : 0;
+      if(glow>0){
+        const g=ctx.createRadialGradient(n.x,n.y,0,n.x,n.y,28);
+        g.addColorStop(0,n.color+'55');
+        g.addColorStop(1,'transparent');
+        ctx.beginPath(); ctx.arc(n.x,n.y,28,0,Math.PI*2);
+        ctx.fillStyle=g; ctx.fill();
+      }
+      ctx.beginPath(); ctx.arc(n.x,n.y,n.r+(glow*2.5),0,Math.PI*2);
+      ctx.fillStyle=n.color; ctx.fill();
+      ctx.font=`${500} 11px Inter,sans-serif`;
+      ctx.fillStyle=`rgba(245,245,255,${0.55+glow*0.4})`;
+      ctx.textAlign='center';
+      ctx.fillText(n.name,n.x,n.y+18);
+      // drift
+      n.x+=n.vx; n.y+=n.vy;
+      if(n.x<30||n.x>W-30) n.vx*=-1;
+      if(n.y<22||n.y>H-22) n.vy*=-1;
+    });
+    requestAnimationFrame(draw);
+  }
+
+  canvas.addEventListener('mousemove', e => {
+    const r=canvas.getBoundingClientRect();
+    mouse.x=e.clientX-r.left; mouse.y=e.clientY-r.top;
+  });
+  canvas.addEventListener('mouseleave', () => { mouse.x=-999; mouse.y=-999; });
+  window.addEventListener('resize', resize);
+  resize(); draw();
+})();
+
+/* ── SOUND TOGGLE ─────────────────────────────────────────────────── */
+(function(){
+  const btn = document.getElementById('sound-btn');
+  if (!btn) return;
+  let on = false, ctx, osc, gain;
+
+  function click(){
+    if(!ctx) ctx = new (window.AudioContext||window.webkitAudioContext)();
+    const o = ctx.createOscillator();
+    const g = ctx.createGain();
+    o.connect(g); g.connect(ctx.destination);
+    o.frequency.value = 660 + Math.random()*220;
+    o.type = 'sine';
+    g.gain.setValueAtTime(0.04, ctx.currentTime);
+    g.gain.exponentialRampToValueAtTime(0.0001, ctx.currentTime + 0.12);
+    o.start(); o.stop(ctx.currentTime + 0.12);
+  }
+
+  function ambient(){
+    if (!ctx) ctx = new (window.AudioContext||window.webkitAudioContext)();
+    osc = ctx.createOscillator();
+    gain = ctx.createGain();
+    // pink noise via buffer
+    const buf = ctx.createBuffer(1, ctx.sampleRate*2, ctx.sampleRate);
+    const d = buf.getChannelData(0);
+    let b0=0,b1=0,b2=0,b3=0,b4=0,b5=0;
+    for(let i=0;i<d.length;i++){
+      const w=Math.random()*2-1;
+      b0=0.99886*b0+w*0.0555179; b1=0.99332*b1+w*0.0750759;
+      b2=0.96900*b2+w*0.1538520; b3=0.86650*b3+w*0.3104856;
+      b4=0.55000*b4+w*0.5329522; b5=-0.7616*b5-w*0.0168980;
+      d[i]=(b0+b1+b2+b3+b4+b5+w*0.5362)*0.07;
+    }
+    const src = ctx.createBufferSource();
+    src.buffer = buf; src.loop = true;
+    const f = ctx.createBiquadFilter();
+    f.type='lowpass'; f.frequency.value=600;
+    src.connect(f); f.connect(gain);
+    gain.gain.value = 0;
+    gain.connect(ctx.destination);
+    gain.gain.setTargetAtTime(0.12, ctx.currentTime, 1.5);
+    src.start(); osc = src;
+  }
+
+  btn.addEventListener('click', () => {
+    on = !on;
+    btn.textContent = on ? '🔊' : '🔇';
+    btn.classList.toggle('active', on);
+    if (on) ambient();
+    else if (gain) gain.gain.setTargetAtTime(0, ctx.currentTime, 0.8);
+  });
+
+  // click sounds on interactive elements when sound is on
+  document.addEventListener('click', e => {
+    if (on && !e.target.closest('#sound-btn')) click();
   });
 })();
 
