--- a/index.html
+++ b/index.html
@@ -348,6 +348,49 @@
   .btn-touch::before { content: ''; position: absolute; inset: 0; background: linear-gradient(135deg, rgba(255,255,255,0.12), transparent); pointer-events: none; }
   .btn-touch svg { width: 16px; height: 16px; flex-shrink: 0; }
 
+  /* ── CHATBOT ── */
+  #chat-bubble { position: fixed; bottom: 80px; right: 28px; z-index: 600; display: flex; flex-direction: column; align-items: flex-end; gap: 8px; }
+  #chat-label { background: rgba(20,20,35,0.92); border: 1px solid rgba(167,139,250,0.3); color: rgba(245,245,255,0.88); font-size: 12px; font-weight: 600; padding: 6px 12px; border-radius: 20px; white-space: nowrap; backdrop-filter: blur(12px); box-shadow: 0 4px 16px rgba(0,0,0,0.4); pointer-events: none; animation: chat-label-bounce 2s ease-in-out infinite; }
+  @keyframes chat-label-bounce { 0%,100% { transform: translateY(0); } 50% { transform: translateY(-3px); } }
+  #chat-toggle { width: 52px; height: 52px; border-radius: 50%; overflow: hidden; cursor: pointer; border: 2px solid rgba(167,139,250,0.5); box-shadow: 0 4px 24px rgba(109,40,217,0.45), 0 0 0 0 rgba(167,139,250,0.3); background: #1a1a2e; padding: 0; transition: transform 0.2s, box-shadow 0.2s; animation: chat-pulse 3s ease-in-out infinite; image-rendering: pixelated; }
+  #chat-toggle:hover { transform: scale(1.08); box-shadow: 0 8px 32px rgba(109,40,217,0.6); }
+  #chat-toggle img { width: 100%; height: 100%; object-fit: cover; display: block; image-rendering: pixelated; }
+  @keyframes chat-pulse { 0%,100% { box-shadow: 0 4px 24px rgba(109,40,217,0.45), 0 0 0 0 rgba(167,139,250,0.3); } 50% { box-shadow: 0 4px 24px rgba(109,40,217,0.45), 0 0 0 7px rgba(167,139,250,0); } }
+
+  #chat-window { position: fixed; bottom: 148px; right: 28px; width: 340px; max-height: 520px; background: rgba(10,10,20,0.96); border: 1px solid rgba(167,139,250,0.25); border-radius: 22px; display: flex; flex-direction: column; overflow: hidden; z-index: 601; backdrop-filter: blur(24px); box-shadow: 0 20px 60px rgba(0,0,0,0.7); transform: scale(0.9) translateY(12px); opacity: 0; pointer-events: none; transition: transform 0.3s cubic-bezier(0.16,1,0.3,1), opacity 0.3s; }
+  #chat-window.open { transform: scale(1) translateY(0); opacity: 1; pointer-events: all; }
+  #chat-header { display: flex; align-items: center; gap: 10px; padding: 14px 16px; border-bottom: 1px solid rgba(255,255,255,0.07); flex-shrink: 0; background: rgba(167,139,250,0.06); }
+  #chat-header-avatar { width: 34px; height: 34px; border-radius: 50%; overflow: hidden; image-rendering: pixelated; border: 1.5px solid rgba(167,139,250,0.4); background: #1a1a2e; flex-shrink: 0; }
+  #chat-header-avatar img { width: 100%; height: 100%; object-fit: cover; display: block; image-rendering: pixelated; }
+  #chat-header-info { flex: 1; }
+  #chat-header-name { font-size: 13px; font-weight: 700; color: var(--text); line-height: 1.2; }
+  #chat-header-status { font-size: 11px; color: #4ade80; display: flex; align-items: center; gap: 4px; }
+  #chat-header-status::before { content: ''; width: 5px; height: 5px; border-radius: 50%; background: #22c55e; display: inline-block; }
+  #chat-close { background: rgba(255,255,255,0.06); border: none; color: var(--muted); width: 28px; height: 28px; border-radius: 8px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 14px; transition: background 0.2s; flex-shrink: 0; }
+  #chat-close:hover { background: rgba(255,255,255,0.12); color: var(--text); }
+  #chat-messages { flex: 1; overflow-y: auto; padding: 16px; display: flex; flex-direction: column; gap: 12px; }
+  #chat-messages::-webkit-scrollbar { width: 4px; }
+  #chat-messages::-webkit-scrollbar-track { background: transparent; }
+  #chat-messages::-webkit-scrollbar-thumb { background: rgba(167,139,250,0.2); border-radius: 2px; }
+  .chat-msg { max-width: 82%; padding: 10px 13px; border-radius: 16px; font-size: 13px; line-height: 1.6; word-wrap: break-word; animation: msg-pop 0.25s cubic-bezier(0.16,1,0.3,1); }
+  @keyframes msg-pop { from { transform: scale(0.92) translateY(4px); opacity: 0; } to { transform: none; opacity: 1; } }
+  .chat-msg.bot { background: rgba(167,139,250,0.1); border: 1px solid rgba(167,139,250,0.15); color: rgba(245,245,255,0.88); align-self: flex-start; border-bottom-left-radius: 4px; }
+  .chat-msg.user { background: linear-gradient(135deg, #7c3aed, #6d28d9); color: #fff; align-self: flex-end; border-bottom-right-radius: 4px; box-shadow: 0 2px 12px rgba(109,40,217,0.35); }
+  .chat-msg.typing { padding: 12px 16px; }
+  .chat-typing-dots { display: flex; gap: 4px; align-items: center; }
+  .chat-typing-dots span { width: 6px; height: 6px; background: rgba(167,139,250,0.6); border-radius: 50%; animation: typing-bounce 1.2s ease-in-out infinite; }
+  .chat-typing-dots span:nth-child(2) { animation-delay: 0.2s; }
+  .chat-typing-dots span:nth-child(3) { animation-delay: 0.4s; }
+  @keyframes typing-bounce { 0%,60%,100% { transform: translateY(0); } 30% { transform: translateY(-5px); } }
+  #chat-input-row { display: flex; gap: 8px; padding: 12px 14px; border-top: 1px solid rgba(255,255,255,0.07); flex-shrink: 0; }
+  #chat-input { flex: 1; background: rgba(255,255,255,0.06); border: 1px solid rgba(255,255,255,0.1); border-radius: 12px; padding: 9px 12px; color: var(--text); font-family: inherit; font-size: 13px; outline: none; resize: none; max-height: 80px; transition: border-color 0.2s; }
+  #chat-input::placeholder { color: rgba(255,255,255,0.3); }
+  #chat-input:focus { border-color: rgba(167,139,250,0.4); }
+  #chat-send { width: 36px; height: 36px; border-radius: 10px; background: linear-gradient(135deg, #7c3aed, #6d28d9); border: none; color: #fff; cursor: pointer; display: flex; align-items: center; justify-content: center; flex-shrink: 0; align-self: flex-end; transition: transform 0.15s, box-shadow 0.15s; }
+  #chat-send:hover { transform: scale(1.08); box-shadow: 0 4px 16px rgba(109,40,217,0.5); }
+  #chat-send:disabled { opacity: 0.4; cursor: not-allowed; transform: none; }
+  #chat-send svg { width: 15px; height: 15px; }
+
 </style>
 </head>
 <body>
@@ -379,7 +422,6 @@
       <li><a href="#life">Life</a></li><li><a href="#persona">Persona</a></li>
     </ul>
   </div>
-  <button id="sound-btn" title="Toggle sound">🔇</button>
   <button class="theme-btn" id="theme-toggle">🌙</button>
 </nav>
 
@@ -1293,6 +1335,135 @@ document.querySelectorAll('a[href^="#"]').forEach(a=>a.addEventListener('click',
   const t=document.querySelector(a.getAttribute('href'));
   if(t){e.preventDefault();t.scrollIntoView({behavior:'smooth'});}
 }));
+
+/* ── CHATBOT ──────────────────────────────────────────────────────── */
+(function(){
+  const APIKEY = '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';
+  const MODEL  = 'openai/gpt-4o-mini';
+  const SYSTEM = `You are Nikshep Doggali's personal AI assistant embedded in his portfolio. You know everything about him:
+- Name: Nikshep Doggali, a full-stack developer and UI enthusiast from Mysore, India
+- Currently Founding Engineer at BackyardDevs (2024–Present, Remote)
+- Founded nogoofup (2024–Present): an education management platform — smart prep tracker, goal-setting, progress analytics
+- Schooled at DPS Mysore (until 2024)
+- Tech stack: TypeScript, React, Next.js, Bun, PostgreSQL, Vercel, Tailwind, Three.js, Node.js, Figma
+- Shipped 6+ production projects: full-stack apps, AI tools, finance trackers, 3D web experiences
+- Passionate about UI design, Three.js, immersive experiences, and clean code
+- Loves spirituality (Bhagavad Gita), creativity, and building things with taste
+- Interests: books, movies, building cool stuff
+- Contact: Instagram @nikkk.exe
+Be concise, friendly, and personal — answer as if you ARE Nikshep's portfolio assistant. Keep responses short (2-3 sentences max unless a longer answer is truly needed).`;
+
+  const messages = [{role:'system', content: SYSTEM}];
+  let isTyping = false;
+
+  const win    = document.getElementById('chat-window');
+  const toggle = document.getElementById('chat-toggle');
+  const close  = document.getElementById('chat-close');
+  const msgs   = document.getElementById('chat-messages');
+  const input  = document.getElementById('chat-input');
+  const send   = document.getElementById('chat-send');
+
+  if (!win) return;
+
+  toggle.addEventListener('click', () => {
+    win.classList.toggle('open');
+    if (win.classList.contains('open') && msgs.children.length === 0) {
+      addMsg('bot', "Hey! 👋 I'm Nikshep's AI. Ask me anything about him — his work, skills, or projects!");
+    }
+  });
+  close.addEventListener('click', () => win.classList.remove('open'));
+
+  function addMsg(role, text) {
+    const div = document.createElement('div');
+    div.className = `chat-msg ${role}`;
+    div.textContent = text;
+    msgs.appendChild(div);
+    msgs.scrollTop = msgs.scrollHeight;
+    return div;
+  }
+
+  function showTyping() {
+    const div = document.createElement('div');
+    div.className = 'chat-msg bot typing';
+    div.id = 'chat-typing';
+    div.innerHTML = '<div class="chat-typing-dots"><span></span><span></span><span></span></div>';
+    msgs.appendChild(div);
+    msgs.scrollTop = msgs.scrollHeight;
+  }
+
+  function removeTyping() {
+    const t = document.getElementById('chat-typing');
+    if (t) t.remove();
+  }
+
+  async function sendMsg() {
+    const text = input.value.trim();
+    if (!text || isTyping) return;
+    input.value = '';
+    isTyping = true;
+    send.disabled = true;
+    addMsg('user', text);
+    messages.push({role:'user', content: text});
+    showTyping();
+    try {
+      const res = await fetch('https://openrouter.ai/api/v1/chat/completions', {
+        method: 'POST',
+        headers: {
+          'Authorization': `Bearer ${APIKEY}`,
+          'Content-Type': 'application/json',
+          'HTTP-Referer': window.location.href,
+          'X-Title': "Nikshep's Portfolio",
+        },
+        body: JSON.stringify({ model: MODEL, messages: messages.slice(0), max_tokens: 300 })
+      });
+      const data = await res.json();
+      removeTyping();
+      const reply = data.choices?.[0]?.message?.content || "Hmm, couldn't get a reply. Try again!";
+      messages.push({role:'assistant', content: reply});
+      addMsg('bot', reply);
+    } catch(e) {
+      removeTyping();
+      addMsg('bot', 'Oops, something went wrong. Try again in a moment!');
+    }
+    isTyping = false;
+    send.disabled = false;
+    input.focus();
+  }
+
+  send.addEventListener('click', sendMsg);
+  input.addEventListener('keydown', e => {
+    if (e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); sendMsg(); }
+  });
+})();
 </script>
+
+<!-- ── CHATBOT ── -->
+<div id="chat-bubble">
+  <div id="chat-label">know me better ✨</div>
+  <button id="chat-toggle" title="Chat with Nikshep's AI">
+    <img src="https://api.dicebear.com/7.x/pixel-art/svg?seed=BlueNinja&backgroundColor=1a1a2e" alt="Nikshep" />
+  </button>
+</div>
+
+<div id="chat-window">
+  <div id="chat-header">
+    <div id="chat-header-avatar">
+      <img src="https://api.dicebear.com/7.x/pixel-art/svg?seed=BlueNinja&backgroundColor=1a1a2e" alt="Nikshep" />
+    </div>
+    <div id="chat-header-info">
+      <div id="chat-header-name">Nikshep's AI</div>
+      <div id="chat-header-status">Online</div>
+    </div>
+    <button id="chat-close">✕</button>
+  </div>
+  <div id="chat-messages"></div>
+  <div id="chat-input-row">
+    <textarea id="chat-input" rows="1" placeholder="Ask me anything…"></textarea>
+    <button id="chat-send">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/></svg>
+    </button>
+  </div>
+</div>
+
 </body>
 </html>
